--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Zara // Web Developer</title>
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Lernantino</h1>
-    <nav>
+    <logo id="logo">
+    <h1>Zara</h1>
+  </logo>
+    <nav id="navigation">
+      <ul>
+        <li><a href=#about>About Me</a></li>
+        <li><a href=#work>Work</a></li>
+        <li><a href=#contact>Contact</a></li>
+      </ul>
     </nav>
   </header>
 
   <!-- hero banner -->
   <section class="hero-banner">
-    <div>
+    <div id="heroText">
       <h2>Cool subtitle here!</h2>
     </div>
   </section>
@@ -28,16 +35,48 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cum adipisci nesciunt dolores ipsum enim labore repudiandae amet rerum dicta temporibus impedit, error magnam id perferendis eos, quam modi repellendus?</p>
+  
     </section>
 
     <!-- portfolio container -->
+    </section>
     <section class="page-section" id="work">
       <h2>Work</h2>
+      <div class="grid-container">
+        <div class="work-item">
+            <a href="https://zarasidd.github.io/prework-study-guide/">
+                <img src="" alt="Prework-Study-Guide">
+                <div class="work-text">Prework Study Guide</div>
+            </a>
+        </div>
+        <div class="work-item">
+            <a href="https://zarasidd.github.io/hori-seo-n/">
+                <img src="" alt="Hori-seo-n-Project">
+                <div class="work-text">Hori-seo-n Homework Project</div>
+            </a>
+        </div>
+        <div class="work-item">
+            <a href="#">
+                <img src="" alt="Coming Soon">
+                <div class="work-text">Coming Soon!</div>
+            </a>
+        </div>
+    </div>
     </section>
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
+      <div id="contactInfo">
+          <p>Phone no.: 123-456-7890</p>
+          <p>Email: example@email.com</p>
+          <div class="social-links">
+              <a href="https://twitter.com/ZaraSid40955151">Twitter</a>
+              <a href="https://github.com/Zarasidd">GitHub</a>
+              <!-- Add other links like Spotify here -->
+          </div>
+      </div>
     </section>
   </main>
 </body>
