--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- hero banner -->
   <section class="hero-banner">
     <div id="heroText">
-      <h2>Cool subtitle here!</h2>
+      <h2>Let's Build!</h2>
     </div>
   </section>
 
