Added the HTML for About Me, Work and Contact sections and CSS to style it

--- a/index.html
+++ b/index.html
@@ -35,49 +35,41 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cum adipisci nesciunt dolores ipsum enim labore repudiandae amet rerum dicta temporibus impedit, error magnam id perferendis eos, quam modi repellendus?</p>
-  
+      <section id="aboutText">
+      <p> Hi, I'm Zara! I'm diving into the world of Front End Web Development. So far, I've gotten the hang of HTML and CSS, and I used these skills to build this portfolio. I love learning and improving with every project I take on. As I grow in this field, I'm excited to delve into more advanced tools and techniques. My goal is always to make things that people enjoy using and find valuable.
+      </p>
+      <p>As I continue my journey, I look forward to collaborating with fellow enthusiasts and experts. There's so much to learn from the community, and I believe that together, we can shape the future of the web. In the end, my mission is simple: to craft digital experiences that not only look great but also make a difference.</p>
     </section>
-
-    <!-- portfolio container -->
-    </section>
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-      <div class="grid-container">
-        <div class="work-item">
-            <a href="https://zarasidd.github.io/prework-study-guide/">
-                <img src="" alt="Prework-Study-Guide">
-                <div class="work-text">Prework Study Guide</div>
-            </a>
-        </div>
-        <div class="work-item">
-            <a href="https://zarasidd.github.io/hori-seo-n/">
-                <img src="" alt="Hori-seo-n-Project">
-                <div class="work-text">Hori-seo-n Homework Project</div>
-            </a>
-        </div>
-        <div class="work-item">
-            <a href="#">
-                <img src="" alt="Coming Soon">
-                <div class="work-text">Coming Soon!</div>
-            </a>
-        </div>
     </div>
     </section>
+  </section>
 
-    <!-- contact -->
-    <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
-      <div id="contactInfo">
-          <p>Phone no.: 123-456-7890</p>
-          <p>Email: example@email.com</p>
-          <div class="social-links">
-              <a href="https://twitter.com/ZaraSid40955151">Twitter</a>
-              <a href="https://github.com/Zarasidd">GitHub</a>
-              <!-- Add other links like Spotify here -->
+    <!-- portfolio container -->
+    <section class="page-section" id="work">
+      <h2>Work</h2>
+      <div class="work-container">
+          <div class="work-item" id="work1">
+              <div class="work-heading">Prework Study Guide</div>
+          </div>
+          <div class="work-item" id="work2">
+              <div class="work-heading">Hori-seo-n Project</div>
+          </div>
+          <div class="work-item" id="work3">
+              <div class="work-heading">My Portfolio</div>
           </div>
       </div>
-    </section>
+  </section>
+
+  <section class="page-section" id="contact">
+    <h2>Contact Me</h2>
+    <div id="contactInfo">
+        <p>Phone no.: 123-456-7890</p>
+        <p>Email: example@email.com</p>
+        <a href="https://twitter.com/ZaraSid40955151">Twitter</a>
+        <a href="https://github.com/Zarasidd">GitHub</a>
+        </div>
+    </div>
+  </section>
   </main>
 </body>
 
